--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Kamui的歌词工房
-subtitle: 还行库啵
+subtitle: I jio'd starfish.
 description: >- # this means to ignore newlines until "baseurl:"
   This is the demo site for a Jekyll theme version of
   HTML5 UP's sleek, responsive site template Prologue.
